# lilith-agent

./: .env.example  .gitignore  .last_failures.txt  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  REVIEW.md  app.py  lilith  package-lock.json  pyproject.toml  requirements.txt  scratch_vision_test.py  skills-lock.json  test_memory_pick_up.py
.agents/skills/arize-instrumentation/: SKILL.md
.github/workflows/: ci.yml
.kiro/skills/: arize-instrumentation
docs/superpowers/plans/: 2026-04-26-langmem-persistent-memory-plan.md
docs/superpowers/specs/: 2026-04-26-langmem-persistent-memory-design.md
sandbox/: Dockerfile  README.md  runner.py  sitecustomize.py
scripts/: build_leaderboard_submission.py  dev_run_gaia.py
src/lilith_agent/: __init__.py  app.py  config.py  gaia_dataset.py  memory.py  models.py  observability.py  runner.py  tui.py
src/lilith_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lilith_agent/tools/: __init__.py  academic.py  audio.py  ddg_search.py  files.py  filters.py  pdf.py  python_exec.py  search.py  todos.py  vision.py  web.py  youtube.py
tests/: test_app_helpers.py  test_compaction.py  test_config.py  test_files.py  test_formatter.py  test_graph.py  test_memory_persistence.py  test_models.py  test_observability.py  test_python_sandbox.py  test_runner.py  test_search.py  test_vision.py  test_vision_breaker.py  test_web.py
