[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lilith-agent"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=1.0,<2.0",
  "langgraph-checkpoint-sqlite",
  "langmem>=0.0.1",
  "langchain-core>=1.0,<2.0",
  "langchain-anthropic>=1.0,<2.0",
  "langchain-google-genai>=2.0.0,<5.0",
  "langchain-ollama>=1.0,<2.0",
  "langchain-huggingface>=1.0,<2.0",
  "langchain-openai>=1.0.0,<2.0",
  "tavily-python>=0.5.0,<1.0",
  "trafilatura>=1.12.0,<3.0",
  "pypdf>=5.0.0,<7.0",
  "openpyxl>=3.1.0,<4.0",
  "python-docx>=1.1.0,<2.0",
  "faster-whisper>=1.0.0,<2.0",
  "youtube-transcript-api>=0.6.0,<2.0",
  "yt-dlp>=2024.10.0",
  "imageio-ffmpeg>=0.5.0,<1.0",
  "pydantic>=2.0.0,<3.0",
  "python-dotenv>=1.0.0,<2.0",
  "ddgs>=6.0.0,<10.0",
  "beautifulsoup4>=4.12.0,<5.0",
  "fal-client>=0.5.0,<1.0",
  "tenacity>=8.0.0,<10.0",
  "rich>=13.0.0,<15.0",
  "prompt-toolkit>=3.0.0,<4.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "responses>=0.25.0",
]

[project.scripts]
lilith = "lilith_agent.tui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
